fix product display spacing on desktop

--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -1775,6 +1775,8 @@ h2.woocommerce-loop-product__title {
 .product_cat-diane-turton.product_cat-abr img.wp-post-image{
     display:none;
 }
+
+
 /*
 ####################################################
 M E D I A  Q U E R I E S
@@ -2213,7 +2215,9 @@ No media query since this is the default in Bootstrap because it is "mobile firs
         margin:0 auto;
     }
 
-
+    .single-product .product .summary {
+        width: 740px!important;
+    }
 }
 
 /* Large devices (desktops, 992px and up) */
